Fri Feb  4 10:28:19 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* README.cvs: Udpated.
	* Checklist: New file for storage in the git repository.

Wed Feb  2 20:34:41 2011  Corinna Vinschen  <vinschen@redhat.com>

	* awkgram.y (free_bc_internal): Remove unused variable.

Tue Feb  1 23:13:10 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* bootstrap.sh: No need to find aclocal.m4, just touch it.

Tue Feb  1 23:05:51 2011  Corinna Vinschen  <vinschen@redhat.com>

	Make values of ctype macros into unsigned char to fix
	warnings found on Cygwin / Newlib.

	* array.c (array_init): Add cast.
	* awkgram.y: Ditto.
	* awkprintf.h: Ditto.
	* builtin.c (sub_common, nondec2awknum): Ditto.
	* command.y: Ditto.
	* eval.c (fmt_ok): Ditto.
	* ext.c (make_builtin): Ditto.
	* main.c (main, arg_assign): Ditto.
	* re.c (check_bracket_exp): Ditto.
	* node.c (r_force_number, parse_escape): Ditto.
	(dump_wstr): Add unused attribute (unrelated).

Tue Feb  1 23:01:40 2011  John Haque  <j.eh@mchsi.com>

	Fix switch debugging.

	* awkgram.y (LEX_SWITCH, case_statements, case_statement,
	case_value): Linearize instructions to facilitate debugging.
	(switch_body): Removed.
	(yylex): Add LEX_CASE in special token processing.
	(free_bc_internal): Remove case Op_K_switch.
	* awk.h (OPCODE): Remove opcode Op_case_list.
	* eval.c (r_interpret): Remove Op_K_switch. Add case
	Op_K_case to handle switch.
	Add cases Op_K_do, Op_K_while, Op_K_for, Op_K_arrayfor, Op_K_switch
	and Op_K_default as no-ops, needed for pgawk.
	* debug.c (print_instruction): Remove case Op_K_switch,
	add case Op_K_case instead.

	Unrelated:
	* awkgram.y (case_statements): As case values, "abc" and /abc/
	no longer considered as duplicates.

	Cleanup grammar and run-time code for switch and loops.
	Jump targets for break and continue are now fixed, and known
	at parse time. See ChangeLog entry dated Oct 21, 2010.

	* awk.h (OPCODE): Remove Op_push_loop and Op_pop_loop.
	(loop_count): Remove definition.