@@ -407,6 +407,8 @@ EXTRA_DIST = \
 	nasty2.ok \
 	negexp.awk \
 	negexp.ok \
+	negrange.awk \
+	negrange.ok \
 	nested.awk \
 	nested.in \
 	nested.ok \
@@ -736,7 +738,7 @@ BASIC_TESTS = addcomma anchgsub argarray arrayparm arrayprm2 arrayprm3 \
 	getline2 getline3 getlnbuf getnr2tb getnr2tm gsubasgn gsubtest gsubtst2 \
 	gsubtst3 gsubtst4 gsubtst5 gsubtst6 hex hsprint inputred intest intprec iobug1 \
 	leaddig leadnl litoct longsub longwrds manglprm math membug1 messages \
-	minusstr mmap8k mtchi18n nasty nasty2 negexp nested nfldstr nfneg \
+	minusstr mmap8k mtchi18n nasty nasty2 negexp negrange nested nfldstr nfneg \
 	nfset nlfldsep nlinstr nlstrina noeffect nofile nofmtch noloop1 \
 	noloop2 nonl noparms nors nulrsend numindex numsubstr octsub ofmt \
 	ofmtbig ofmtfidl ofmts onlynl opasnidx opasnslf paramdup paramres \
