@@ -1,0 +1,7 @@
+n = 6
+s[1] = "Volume"
+s[2] = "8"
+s[3] = "Numbers"
+s[4] = "1-2"
+s[5] = "January"
+s[6] = "1971"
