@@ -1,3 +1,8 @@
+Mon Feb  7 21:39:39 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* Makefile.am (negrange): New test.
+	* negrange.awk, negrange.ok: New files.
+
 Tue Feb  1 23:21:39 2011  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* xref.awk: Change sort command to just "sort"; avoids
